src/test/deca/syntax/invalid/renduInter01/04missing_brace_if.deca
// Description:
//      Programme lexicalement incorrect
//      => une instruction conditionnelle if...else doit comporter des accolades "if (condition) { ... } else { ... }"
//
// Resultats:
//      Erreur syntaxique
//      Ligne 12 : token 'println' inattendu => token '{' attendu

{
    int x = 4;
    if ( x == 4 )
        println("hello if", x);
    else
        println("hello else", x);

}
